--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,51 +2,40 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-
-    <meta name="viewport" content="width=device-width,
-initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Página Inicial</title>
-    <!-- Incluindo Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.
-min.css" />
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
   </head>
+
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-success">
       <a class="navbar-brand" href="/">Biblioteca</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle
-navigation"><span class="navbar-toggler-icon"></span></button>
+
+      <button class="navbar-toggler" type="button" data-toggle="collapse"
+        data-target="#navbarNav" aria-controls="navbarNav"
+        aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link text-dark" href="/">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-dark" href="/livros/">Livros</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-dark" href="/reserva/">Reserva</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-dark" href="/cidade/">Cidade</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-dark" href="/autor/">Autor</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-dark" href="/editor/">Editora</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-dark" href="/genero/">Genero</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-dark" href="/leitor/">Leitor</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-dark" href="/admin/">Administração</a>
-          </li>
+
+          <li class="nav-item"><a class="nav-link text-dark" href="/">Home</a></li>
+          <li class="nav-item"><a class="nav-link text-dark" href="/livros/">Livros</a></li>
+          <li class="nav-item"><a class="nav-link text-dark" href="/reserva/">Reserva</a></li>
+          <li class="nav-item"><a class="nav-link text-dark" href="/cidade/">Cidade</a></li>
+          <li class="nav-item"><a class="nav-link text-dark" href="/autor/">Autor</a></li>
+          <li class="nav-item"><a class="nav-link text-dark" href="/editor/">Editora</a></li>
+          <li class="nav-item"><a class="nav-link text-dark" href="/genero/">Gênero</a></li>
+          <li class="nav-item"><a class="nav-link text-dark" href="/leitor/">Leitor</a></li>
+          <li class="nav-item"><a class="nav-link text-dark" href="/admin/">Administração</a></li>
+
         </ul>
       </div>
     </nav>
+
     <div class="container mt-5">
       <div class="jumbotron text-center">
         <h1 class="display-4">Olá, é bom te ver por aqui</h1>
@@ -54,9 +43,55 @@ navigation"><span class="navbar-toggler-icon"></span></button>
         <p class="lead">Seja Bem Vindo(A)</p>
       </div>
     </div>
-    <!-- Incluindo jQuery e Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 
+    <!-- TABELA CORRETA -->
+    <div class="container">
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th>Nome</th>
+            <th>Autor</th>
+            <th>Editora</th>
+            <th>Gênero</th>
+            <th>Preço</th>
+            <th>Data Publicação</th>
+            <th>Status</th>
+            <th>Excluir</th>
+            <th>Editar</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          {% for livros in livros %}
+          <tr>
+            <td>{{ livros.nome }}</td>
+            <td>{{ livros.autor }}</td>
+            <td>{{ livros.editora }}</td>
+
+            <td>
+              {% for genero in livros.genero.all %}
+                {{ genero.nome }}{% if not forloop.last %}, {% endif %}
+              {% endfor %}
+            </td>
+
+            <td>{{ livros.preco }}</td>
+            <td>{{ livros.data_plub }}</td>
+            <td>{{ livros.status }}</td>
+
+            <td>
+              <a href="delete/{{ livros.id }}" class="btn btn-danger btn-sm">
+                Excluir
+              </a>
+            </td>
+            <td> <a href="editar/{{ livros.id}}" class="btn btn-warning">Editar</a></td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+    </div>
+
+    <!-- Scripts -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   </body>
